<resources>
    <string name="app_name">OKOkV3ScaleDemo</string>
    <string name="user_info_tips_3">Height:</string>
    <string name="user_info_tips_4">Age:</string>
    <string name="user_info_tips_6">Please enter height</string>
    <string name="user_info_tips_7">Please enter age</string>
    <string name="main_page_tips_1">RSSI</string>
    <string name="data_serach_tips4">Gender</string>
    <string name="tips_1">cm</string>
    <string name="tips_2">Userinfo</string>
    <string name="tips_3">Save</string>
    <string name="tips_4">Health measurement</string>
    <string name="tips_9">Status：</string>
    <string name="tips_9_1">Work status：</string>
    <string name="tips_9_2">Weight：</string>
    <string name="tips_10">Mac：</string>
    <string name="tips_11">RSSI：</string>
    <string name="tips_12">Measured data</string>
    <string name="unit">kg</string>
    <string name="tips_13">Body score</string>
    <string name="tips_14">score</string>
    <string name="tips_15">Body age</string>
    <string name="tips_16">age</string>
    <string name="tips_17">Axunge</string>
    <string name="unit_1">%</string>
    <string name="tips_19">Muscle weight</string>
    <string name="tips_20">Visceral</string>
    <string name="tips_21">Water</string>
    <string name="tips_22">Metabolism</string>
    <string name="tips_23">kcal</string>
    <string name="tips_24">Bone</string>
    <string name="tips_25">Protein</string>
    <string name="tips_26">Weight</string>
    <string name="tips_27">BMI</string>
    <string name="tips_47">historical data</string>
    <string name="tips_50">bpm</string>
    <string name="tips_52">Body type</string>
    <string name="tips_53">LBM</string>
    <string name="tips_54">Start measurement</string>
    <string name="tips_56">Discovered devices:\n Name:%1$s\n Mac:%2$s\n Manufacturer:%3$s\n Model:%4$s\n Version:%5$s</string>
    <string name="tips_57">Current device:\n Name:%1$s \n Mac:%2$s\n Manufacturer:%3$s\n Model:%4$s\n Version:%5$s</string>
    <string name="tips_58">Bind</string>
    <string name="tips_59">Unbind</string>
    <string name="tips_60">Back</string>
</resources>
